Setup document page and main page

--- a/package.json
+++ b/package.json
@@ -4,13 +4,21 @@
   "description": "This is dock90. No frills.",
   "main": "index.js",
   "repository": "git@github.com:dock90/oh-so-fancy.git",
-  "author": "EdwardGoomba <ask@edwardvdesign.com>",
+  "author": "EdwardGoomba <edward@dock90.io>",
   "license": "MIT",
   "private": false,
+  "scripts": {
+    "build": "next build",
+    "start": "next start",
+    "dev": "next"
+  },
   "dependencies": {
+    "@material-ui/core": "^3.9.3",
     "next": "^8.0.3",
     "react": "^16.8.4",
-    "react-dom": "^16.8.4"
+    "react-dom": "^16.8.4",
+    "react-jss": "^8.6.1",
+    "styled-components": "^4.2.0"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
@@ -21,6 +29,7 @@
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-react": "^7.12.4",
-    "prettier": "^1.16.4"
+    "prettier": "^1.16.4",
+    "prop-types": "^15.7.2"
   }
 }
