--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@material-ui/core": "^3.9.3",
+    "@sanity/client": "^0.140.11",
     "next": "^8.0.3",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
