--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "scripts": {
     "build": "next build",
     "start": "next start",
-    "dev": "next"
+    "dev": "next",
+    "lint": "eslint pages"
   },
   "dependencies": {
     "@material-ui/core": "^3.9.3",
