--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
   "license": "MIT",
   "private": false,
   "scripts": {
+    "dev": "node server.js",
     "build": "next build",
-    "start": "next start",
-    "dev": "next",
+    "start": "NODE_ENV=production node server.js",
     "lint": "eslint pages"
   },
   "dependencies": {
