--- a/package.json
+++ b/package.json
@@ -8,14 +8,18 @@
   "license": "MIT",
   "private": false,
   "scripts": {
-    "dev": "node server.js",
+    "dev": "next",
+    "dev server": "node server.js",
     "build": "next build",
     "start": "NODE_ENV=production node server.js",
     "lint": "eslint pages"
   },
   "dependencies": {
     "@material-ui/core": "^3.9.3",
+    "@sanity/block-content-to-react": "^2.0.6",
     "@sanity/client": "^0.140.11",
+    "@sanity/image-url": "^0.140.12",
+    "date-fns": "^1.30.1",
     "next": "^8.0.3",
     "next-routes": "^1.4.2",
     "react": "^16.8.4",
