--- a/package.json
+++ b/package.json
@@ -21,12 +21,15 @@
     "@sanity/client": "^0.140.11",
     "@sanity/image-url": "^0.140.12",
     "date-fns": "^1.30.1",
+    "http": "^0.0.0",
     "next": "^8.0.4",
     "next-routes": "^1.4.2",
+    "path-match": "^1.2.4",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-jss": "^8.6.1",
-    "styled-components": "^4.2.0"
+    "styled-components": "^4.2.0",
+    "url": "^0.11.0"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
