--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "dependencies": {
     "@material-ui/core": "^3.9.3",
+    "@material/card": "^1.1.1",
+    "@material/elevation": "^1.1.0",
     "@sanity/block-content-to-react": "^2.0.6",
     "@sanity/client": "^0.140.11",
     "@sanity/image-url": "^0.140.12",
