--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sofancy",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "This is dock90. No frills.",
   "main": "index.js",
   "repository": "git@github.com:dock90/oh-so-fancy.git",
@@ -27,6 +27,7 @@
     "next": "^8.0.4",
     "next-routes": "^1.4.2",
     "path-match": "^1.2.4",
+    "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-jss": "^8.6.1",
@@ -42,7 +43,6 @@
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-react": "^7.12.4",
-    "prettier": "^1.16.4",
-    "prop-types": "^15.7.2"
+    "prettier": "^1.16.4"
   }
 }
