--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@sanity/client": "^0.140.11",
     "@sanity/image-url": "^0.140.12",
     "date-fns": "^1.30.1",
+    "groq": "^0.141.5",
     "http": "^0.0.0",
     "next": "^8.0.4",
     "next-routes": "^1.4.2",
