--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "export": "yarn build && next export"
   },
   "dependencies": {
+    "@sanity/block-content-to-react": "^2.0.7",
     "@sanity/client": "^1.149.7",
     "next": "^9.3.6",
     "react": "^16.13.1",
