--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "dock90",
-  "version": "1.0.5",
-  "description": "Website for Dock90 LLC - a web app development studio.",
+  "version": "1.0.6",
+  "description": "Website for Dock90 LLC - a customer experience studio.",
   "main": "index.js",
   "repository": "git@github.com:dock90/sofancy.git",
   "author": "EdwardGoomba <edward@dock90.io>",
